# data-shift-watch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: baseline.csv  current.csv
src/data_shift_watch/: __init__.py  __main__.py  cli.py  core.py  csv_loader.py  errors.py  metrics.py  models.py  reporting.py
tests/: test_cli.py  test_metrics.py
